--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -27,4 +27,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="93dp" />
 
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/currentLocationLabel"
+        android:layout_below="@+id/addressLabel"
+        android:layout_marginTop="92dp"
+        android:onClick="addClick"
+        android:text="Button" />
+
 </RelativeLayout>
