--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,5 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
+	xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -36,5 +38,17 @@
         android:layout_marginTop="92dp"
         android:onClick="addClick"
         android:text="Button" />
+    
+    <com.beardedhen.androidbootstrap.BootstrapButton
+        android:id="@+id/button1"
+	    android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/currentLocationLabel"
+      	android:layout_below="@+id/addressLabel"
+	    android:layout_margin="10dp"
+	    android:text="Add Todo"
+	    bootstrapbutton:bb_roundedCorners="true"
+	    bootstrapbutton:bb_type="primary"
+	    android:onClick="addClick" />
 
 </RelativeLayout>
