--- a/res/layout/activity_home_screen.xml
+++ b/res/layout/activity_home_screen.xml
@@ -11,7 +11,7 @@
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc.
     -->
-<com.echo.holographlibrary.PieGraph
+<!--<com.echo.holographlibrary.PieGraph
         android:id="@+id/graph"
         android:layout_width="wrap_content"
         android:layout_height="275dp"
@@ -19,7 +19,7 @@
         android:layout_marginTop="0dp"
         android:paddingTop="0dp"
         app:innerCircleRatio="200"
-        app:slicePadding="1dip" />
+        app:slicePadding="1dip" />-->
 
     <!--
          This FrameLayout insets its children based on system windows using
@@ -56,7 +56,7 @@
                 android:background="#FFFFFF" >
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/cancelButton"
                     style="@style/ButtonBarButton"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -99,7 +99,7 @@
             android:textColor="#000000" />
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/saveButton"
             style="@style/ButtonBarButton"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
