--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:layout_marginTop="93dp" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/saveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/currentLocationLabel"
@@ -38,17 +38,5 @@
         android:layout_marginTop="92dp"
         android:onClick="addClick"
         android:text="Button" />
-    
-    <com.beardedhen.androidbootstrap.BootstrapButton
-        android:id="@+id/button1"
-	    android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/currentLocationLabel"
-      	android:layout_below="@+id/addressLabel"
-	    android:layout_margin="10dp"
-	    android:text="Add Todo"
-	    bootstrapbutton:bb_roundedCorners="true"
-	    bootstrapbutton:bb_type="primary"
-	    android:onClick="addClick" />
 
 </RelativeLayout>
