--- a/res/layout/activity_add_to_do.xml
+++ b/res/layout/activity_add_to_do.xml
@@ -40,18 +40,6 @@
     </EditText>
 
     <Button
-        android:id="@+id/saveButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/notesTxtBox"
-        android:layout_below="@+id/notesTxtBox"
-        android:layout_marginTop="42dp"
-        android:onClick="saveTodo"
-        android:paddingLeft="45dp"
-        android:paddingRight="45dp"
-        android:text="@string/saveBtn" />
-
-    <Button
         android:id="@+id/cancelButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -61,5 +49,26 @@
         android:paddingLeft="45dp"
         android:paddingRight="45dp"
         android:text="@string/cancelBtnText" />
+
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/notesTxtBox"
+        android:layout_alignParentBottom="true"
+        android:onClick="saveTodo"
+        android:paddingLeft="45dp"
+        android:paddingRight="45dp"
+        android:text="@string/saveBtn" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/cancelButton"
+        android:layout_alignLeft="@+id/saveButton"
+        android:layout_alignRight="@+id/cancelButton"
+        android:layout_marginBottom="27dp"
+        android:onClick="showDatePickerDialog"
+        android:text="@string/pick_date" />
 
 </RelativeLayout>
