Making other activites fullscreen..

--- a/res/layout/activity_home_screen.xml
+++ b/res/layout/activity_home_screen.xml
@@ -122,6 +122,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="125dp"
+            android:gravity="center"
             android:text="80%"
             android:textColor="#FFFFFF"
             android:textSize="60sp" />
