Some changes to list todo

--- a/res/layout/activity_list_todo.xml
+++ b/res/layout/activity_list_todo.xml
@@ -28,6 +28,17 @@
 
         </ListView>
 
+        <Button
+            android:id="@+id/button1"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="16dp"
+            android:text="Add" 
+            android:onClick="viewMap"/>
+
     </RelativeLayout>
 
 </FrameLayout>
