ListTodo changes commit

--- a/res/layout/activity_home_screen.xml
+++ b/res/layout/activity_home_screen.xml
@@ -117,7 +117,7 @@
         </TableLayout>
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/rowId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
