--- a/res/layout/activity_list_todo.xml
+++ b/res/layout/activity_list_todo.xml
@@ -16,7 +16,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/spinner1" >
-
         </ListView>
 
         <Spinner
@@ -36,7 +35,8 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:text="List Todo items"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/titletextcolor" />
 
         <Button
             android:id="@+id/button1"
@@ -45,10 +45,8 @@
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/spinner1"
             android:layout_alignParentRight="true"
-            android:onClick="viewMap"
             android:text="Add" />
 
     </RelativeLayout>
 
 </FrameLayout>
-
