--- a/res/layout/icon_view.xml
+++ b/res/layout/icon_view.xml
@@ -8,18 +8,27 @@
         android:id="@+id/item_todo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/map_button"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="17dp"
+        android:minHeight="50dp"
+        android:onClick="viewMap"
         android:text="Todo Item"
         android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/rowId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/map_button"
+        android:layout_toLeftOf="@+id/map_button"
+        android:text="TextView"
+        android:visibility="invisible" />
 
     <ImageButton
         android:id="@+id/map_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="15dp"
+        android:layout_alignTop="@+id/checkBox1"
+        android:layout_marginRight="24dp"
         android:layout_toLeftOf="@+id/checkBox1"
         android:adjustViewBounds="true"
         android:onClick="viewMap"
@@ -32,9 +41,8 @@
         android:id="@+id/checkBox1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/map_button"
+        android:layout_alignBottom="@+id/item_todo"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="14dp"
         android:text="Done" />
 
 </RelativeLayout>
