--- a/res/layout/activity_list_todo.xml
+++ b/res/layout/activity_list_todo.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent" >
 
         <ListView
-            android:id="@+id/listView1"
+            android:id="@+id/notificationsList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
