--- a/res/layout/activity_list_todo.xml
+++ b/res/layout/activity_list_todo.xml
@@ -47,6 +47,17 @@
             android:layout_alignParentRight="true"
             android:text="Add" />
 
+        <Spinner
+            android:id="@+id/spinner2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/spinner1"
+            android:layout_below="@+id/item_todo"
+            android:layout_toLeftOf="@+id/button1"
+            android:layout_toRightOf="@+id/spinner1"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown" />
+
     </RelativeLayout>
 
 </FrameLayout>
