--- a/res/layout/dialog_layout.xml
+++ b/res/layout/dialog_layout.xml
@@ -12,7 +12,13 @@
         android:maxLines="2" />
     
     <TextView
-        android:id="@+id/phonenumber"
+        android:id="@+id/rating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:maxLines="2" />
+    
+    <TextView
+        android:id="@+id/price_level"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLines="2" />
