--- a/res/layout/dialog_layout.xml
+++ b/res/layout/dialog_layout.xml
@@ -22,5 +22,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLines="2" />
+    
+    <Button 
+        android:id="@+id/get_direction"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:onClick="getDirections"
+        android:text="@string/get_direction" />
+    
+    <TextView 
+        android:id="@+id/location"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:visibility="invisible"/>
 
 </LinearLayout>
