--- a/res/layout/activity_add_to_do.xml
+++ b/res/layout/activity_add_to_do.xml
@@ -9,7 +9,7 @@
     tools:context=".AddToDoActivity" >
 
     <Spinner
-        android:id="@+id/preferredLocationSpinner"
+        android:id="@+id/subCategorySpinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/categorySpinner"
@@ -29,9 +29,9 @@
         android:id="@+id/notesTxtBox"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/preferredLocationSpinner"
-        android:layout_alignRight="@+id/preferredLocationSpinner"
-        android:layout_below="@+id/preferredLocationSpinner"
+        android:layout_alignLeft="@+id/subCategorySpinner"
+        android:layout_alignRight="@+id/subCategorySpinner"
+        android:layout_below="@+id/subCategorySpinner"
         android:layout_marginTop="60dp"
         android:ems="10"
         android:hint="@string/noteText" >
@@ -46,9 +46,12 @@
         android:layout_alignBaseline="@+id/saveButton"
         android:layout_alignBottom="@+id/saveButton"
         android:layout_alignRight="@+id/notesTxtBox"
+        android:background="@color/blue"
+        android:onClick="cancelOnClick"
         android:paddingLeft="45dp"
         android:paddingRight="45dp"
-        android:text="@string/cancelBtnText" />
+        android:text="@string/cancelBtnText"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/saveButton"
@@ -56,10 +59,12 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/notesTxtBox"
         android:layout_alignParentBottom="true"
+        android:background="@color/blue"
         android:onClick="saveTodo"
         android:paddingLeft="45dp"
         android:paddingRight="45dp"
-        android:text="@string/saveBtn" />
+        android:text="@string/saveBtn"
+        android:textColor="@color/white" />
 
     <Button
         android:layout_width="wrap_content"
@@ -68,7 +73,9 @@
         android:layout_alignLeft="@+id/saveButton"
         android:layout_alignRight="@+id/cancelButton"
         android:layout_marginBottom="27dp"
+        android:background="@color/blue"
         android:onClick="showDatePickerDialog"
-        android:text="@string/pick_date" />
+        android:text="@string/pick_date"
+        android:textColor="@color/white" />
 
 </RelativeLayout>
