--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,4 +2,7 @@
 
     <color name="black_overlay">#66000000</color>
 	<color name="titletextcolor">#3232CD</color>
+	<color name="royal_blue">#4169E1</color>
+	<color name="white">#FFFFFF</color>
+	<color name="blue">#0099CC</color>
 </resources>
