--- a/res/layout/activity_add_to_do.xml
+++ b/res/layout/activity_add_to_do.xml
@@ -6,6 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#0099cc"
     tools:context=".AddToDoActivity" >
 
     <Spinner
@@ -18,11 +19,12 @@
     
     <Spinner
         android:id="@+id/categorySpinner"
+        style="@color/white"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="34dp"
         android:prompt="@string/categSpinnerPromptTxt" />
 
     <EditText
@@ -34,7 +36,10 @@
         android:layout_below="@+id/subCategorySpinner"
         android:layout_marginTop="60dp"
         android:ems="10"
-        android:hint="@string/noteText" >
+        android:hint="@string/noteText"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textColorLink="@color/white" >
 
         <requestFocus />
     </EditText>
@@ -46,12 +51,12 @@
         android:layout_alignBaseline="@+id/saveButton"
         android:layout_alignBottom="@+id/saveButton"
         android:layout_alignRight="@+id/notesTxtBox"
-        android:background="@color/blue"
+        android:background="@color/white"
         android:onClick="cancelOnClick"
         android:paddingLeft="45dp"
         android:paddingRight="45dp"
         android:text="@string/cancelBtnText"
-        android:textColor="@color/white" />
+        android:textColor="@color/black" />
 
     <Button
         android:id="@+id/saveButton"
@@ -59,12 +64,12 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/notesTxtBox"
         android:layout_alignParentBottom="true"
-        android:background="@color/blue"
+        android:background="@color/white"
         android:onClick="saveTodo"
         android:paddingLeft="45dp"
         android:paddingRight="45dp"
         android:text="@string/saveBtn"
-        android:textColor="@color/white" />
+        android:textColor="@color/black" />
 
     <Button
         android:layout_width="wrap_content"
@@ -73,9 +78,22 @@
         android:layout_alignLeft="@+id/saveButton"
         android:layout_alignRight="@+id/cancelButton"
         android:layout_marginBottom="27dp"
-        android:background="@color/blue"
+        android:background="@color/white"
         android:onClick="showDatePickerDialog"
         android:text="@string/pick_date"
-        android:textColor="@color/white" />
+        android:textColor="@color/black" />
+
+    <TextView
+        android:id="@+id/addTodoHeading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:shadowDx="2.0"
+        android:shadowDy="2.0"
+        android:text="Add a new Todo"
+        android:textColor="@color/white"
+        android:textSize="20sp" />
 
 </RelativeLayout>
