--- a/res/layout/activity_list_todo.xml
+++ b/res/layout/activity_list_todo.xml
@@ -4,7 +4,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     tools:context="com.example.listtodo.ListToDoActivity"
-    tools:ignore="MergeRootFrame" >
+    tools:ignore="MergeRootFrame"
+    android:background="#0099cc" >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -24,19 +25,20 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignRight="@+id/item_todo"
-            android:layout_below="@+id/item_todo"
-            android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown" />
+            android:layout_below="@+id/item_todo" />
 
         <TextView
-            android:id="@+id/item_todo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:text="List Todo items"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/titletextcolor" />
+	        android:id="@+id/item_todo"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentTop="true"
+	        android:layout_centerHorizontal="true"
+	        android:layout_marginBottom="20dp"
+	        android:shadowDx="2.0"
+	        android:shadowDy="2.0"
+	        android:text="Your Todo list"
+	        android:textColor="@color/white"
+	        android:textSize="20sp" />
 
         <Button
             android:id="@+id/button1"
@@ -45,7 +47,9 @@
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/spinner1"
             android:layout_alignParentRight="true"
-            android:text="Add" />
+            android:textSize="25sp"
+            android:text="+" 
+            android:textColor="@color/white"/>
 
         <Spinner
             android:id="@+id/spinner2"
@@ -54,9 +58,7 @@
             android:layout_alignBottom="@+id/spinner1"
             android:layout_below="@+id/item_todo"
             android:layout_toLeftOf="@+id/button1"
-            android:layout_toRightOf="@+id/spinner1"
-            android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown" />
+            android:layout_toRightOf="@+id/spinner1" />
 
     </RelativeLayout>
 
