--- a/res/layout/activity_list_todo.xml
+++ b/res/layout/activity_list_todo.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/spinner1" >
+            android:layout_below="@+id/spinner1"
+            android:fontFamily="sans-serif-light" >
         </ListView>
 
         <Spinner
@@ -25,7 +26,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignRight="@+id/item_todo"
-            android:layout_below="@+id/item_todo" />
+            android:layout_below="@+id/item_todo"
+            android:fontFamily="sans-serif-light" />
 
         <TextView
 	        android:id="@+id/item_todo"
@@ -38,7 +40,8 @@
 	        android:shadowDy="2.0"
 	        android:text="Your Todo list"
 	        android:textColor="@color/white"
-	        android:textSize="20sp" />
+	        android:textSize="20sp" 
+	        android:fontFamily="sans-serif-light"/>
 
         <Button
             android:id="@+id/button1"
@@ -49,7 +52,8 @@
             android:layout_alignParentRight="true"
             android:textSize="25sp"
             android:text="+" 
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:fontFamily="sans-serif-light"/>
 
         <Spinner
             android:id="@+id/spinner2"
@@ -58,7 +62,8 @@
             android:layout_alignBottom="@+id/spinner1"
             android:layout_below="@+id/item_todo"
             android:layout_toLeftOf="@+id/button1"
-            android:layout_toRightOf="@+id/spinner1" />
+            android:layout_toRightOf="@+id/spinner1" 
+            android:fontFamily="sans-serif-light"/>
 
     </RelativeLayout>
 
