--- a/res/layout/activity_list_todo.xml
+++ b/res/layout/activity_list_todo.xml
@@ -36,6 +36,7 @@
 	        android:layout_alignParentTop="true"
 	        android:layout_centerHorizontal="true"
 	        android:layout_marginBottom="20dp"
+	        android:layout_marginTop="20dp"
 	        android:shadowDx="2.0"
 	        android:shadowDy="2.0"
 	        android:text="Your Todo list"
