--- a/res/layout/activity_home_screen.xml
+++ b/res/layout/activity_home_screen.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0099cc"
+    android:background="#669900"
     tools:context="com.stalker.HomeScreenActivity" >
 
     <!--
@@ -60,10 +60,10 @@
 		            android:layout_height="match_parent"
 		            android:layout_margin="0dp"
 		            android:layout_weight="1"
-		            android:background="#FDFCFC"
+		            android:background="@android:color/transparent"
 		            android:drawableLeft="@drawable/pencil32"
 		            android:text="@string/actn2"
-		            android:textColor="#000000"
+		            android:textColor="#669900"
 		            android:fontFamily="sans-serif-light" />
 		        
 		        <Button
@@ -76,7 +76,7 @@
 		            android:background="#FDFCFC"
 		            android:drawableLeft="@drawable/linedpapercheck32"
 		            android:text="@string/actn4"
-		            android:textColor="#000000"
+		            android:textColor="#669900"
 		            android:fontFamily="sans-serif-light" />
 
     </TableRow>
@@ -99,7 +99,7 @@
             android:background="#FDFCFC"
             android:drawableLeft="@drawable/mapiconbig"
             android:text="@string/actn3"
-            android:textColor="#000000"
+            android:textColor="#669900"
             android:fontFamily="sans-serif-light" />
 
         <Button
@@ -113,7 +113,7 @@
             android:drawableLeft="@drawable/gear32"
             android:minWidth="48dp"
             android:text="@string/actn1"
-            android:textColor="#000000"
+            android:textColor="#669900"
             android:fontFamily="sans-serif-light" />
 
     </TableRow>
