--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,8 +6,14 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#0099cc"
+    android:background="#669900"
     tools:context=".MainActivity" >
+
+<!-- Navy Blueish - #323B47 -->
+<!-- Purplish - #5D5163 -->
+<!-- Sky Blue - #CEEAFF -->
+<!-- Better Blue - #7CC9DE -->
+<!-- Black Transparent - #3F3230 -->
 
     <TextView
         android:id="@+id/prefHeading"
@@ -34,7 +40,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/white"
         android:textSize="20sp"
-        android:fontFamily="sans-serif-light" />
+        android:fontFamily="sans-serif-light"  />
 
     <TextView
         android:id="@+id/textRadius"
@@ -56,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/textRadius"
         android:layout_alignRight="@+id/textRadiusInput"
-        android:background="@color/blue"
+        android:background="#669900"
         android:fontFamily="sans-serif-light"
         android:switchTextAppearance="@color/white"
         android:textSize="30sp"
@@ -77,7 +83,7 @@
         android:hint="500"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:inputType="number"/>
+        android:inputType="number" />
 
     <Button
         android:id="@+id/updatePref"
@@ -89,7 +95,8 @@
         android:background="@color/white"
         android:fontFamily="sans-serif-light"
         android:text="Update"
-        android:textColor="@color/black"
-        android:onClick="updatePref"/>
+        android:textColor="#669900"
+        android:onClick="updatePref"
+        android:shadowColor="#000000"/>
     
 </RelativeLayout>
