--- a/res/layout/icon_view.xml
+++ b/res/layout/icon_view.xml
@@ -10,14 +10,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:gravity="center"
-        android:minHeight="80dp"
+        android:minHeight="50dp"
         android:onClick="viewMap"
         android:text="Todo Item"
         android:textAlignment="gravity"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/white"
-        android:textSize="23dp"
-        android:textStyle="bold" />
+        android:textSize="15dp"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-light"
+        android:layout_margin="10dp" />
 
     <TextView
         android:id="@+id/rowId"
@@ -26,7 +28,8 @@
         android:layout_alignBottom="@+id/map_button"
         android:layout_toLeftOf="@+id/map_button"
         android:text="TextView"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        android:fontFamily="sans-serif-light" />
 
     <CheckBox
         android:id="@+id/checkBox1"
@@ -34,25 +37,27 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/item_todo"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="20dp"
+        android:layout_margin="10dp"
         android:text="Done"
         android:textColor="@color/white"
         android:textColorLink="@color/white"
-        android:textSize="23dp"
-        android:textStyle="bold" />
+        android:textSize="15dp"
+        android:textStyle="bold" 
+        android:fontFamily="sans-serif-light"/>
 
     <ImageButton
         android:id="@+id/map_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/checkBox1"
-        android:layout_marginRight="23dp"
+        android:layout_marginRight="10dp"
         android:layout_toLeftOf="@+id/checkBox1"
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
-        android:maxHeight="70dp"
+        android:maxHeight="30dp"
         android:maxWidth="70dp"
         android:onClick="viewMap"
-        android:src="@drawable/mapiconbig" />
+        android:src="@drawable/mapiconbig"
+        android:fontFamily="sans-serif-light" />
 
 </RelativeLayout>
