--- a/res/layout/icon_view.xml
+++ b/res/layout/icon_view.xml
@@ -39,7 +39,8 @@
         android:textColor="@color/white"
         android:textColorLink="@color/white"
         android:textSize="23dp"
-        android:textStyle="bold" />
+        android:textStyle="bold" 
+        android:onClick="checkboxClicked"/>
 
     <ImageButton
         android:id="@+id/map_button"
