Pie chart changes based on done todos

--- a/res/layout/activity_home_screen.xml
+++ b/res/layout/activity_home_screen.xml
@@ -120,16 +120,16 @@
         </TableLayout>
 
         <TextView
-            android:id="@+id/rowId"
+            android:id="@+id/percent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="150dp"
+            android:fontFamily="sans-serif-light"
             android:gravity="center"
-            android:text="80%"
+            android:text=""
             android:textColor="#FFFFFF"
-            android:textSize="60sp"
-            android:fontFamily="sans-serif-light" />
+            android:textSize="60sp" />
 
         <TextView
             android:id="@+id/textView1"
