--- a/res/layout/activity_list_todo.xml
+++ b/res/layout/activity_list_todo.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     tools:context="com.example.listtodo.ListToDoActivity"
     tools:ignore="MergeRootFrame"
-    android:background="#669900" >
+    android:background="#1DA9DA" >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -53,7 +53,7 @@
             android:layout_alignParentRight="true"
             android:textSize="25sp"
             android:text="+" 
-            android:textColor="#669900"
+            android:textColor="#1DA9DA"
             android:background="@color/white"
             android:fontFamily="sans-serif-light"/>
 
