--- a/res/layout/activity_notification.xml
+++ b/res/layout/activity_notification.xml
@@ -3,7 +3,7 @@
     style="@style/FullscreenTheme"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#5D5163"
+    android:background="#1DA9DA"
     tools:context=".NotificationActivity" >
 
     <!--
